# ftk

./: ChangeLog  Makefile  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  config.h  config.h.in  config_ftk.h.in  configure  configure.in  ftk.cnf  ftk.cnf.in  ftk.pc  libtool  ltmain.sh
apps/calculator/: Makefile.am  Makefile.in  ftk_app_calc.c  main.c
apps/calculator/data/: calc.desktop
apps/calculator/icons/: Makefile  Makefile.am  Makefile.in
apps/calculator/xul/: Makefile  Makefile.am  Makefile.in  calc.xul
apps/desktop/: Makefile.am  Makefile.in  app_info.c  app_info.h  ftk_tester.c  main.c
apps/desktop/icons/: Makefile.am
apps/desktop/xul/: appview-h.xul  appview-v.xul  desktop-h.xul  desktop-v.xul
apps/filemanager/: Makefile  Makefile.am  Makefile.in  ftk_app_file_browser.c  main.c
apps/filemanager/data/: Makefile  Makefile.in  filem.desktop
apps/filemanager/icons/: Makefile  Makefile.am  Makefile.in
script_binding/lua/: Makefile.am  Makefile.in  demo1.lua  demo2.lua  demo3.lua  demo4.lua  demo_alpha.lua  demo_button.lua  demo_check_button.lua  demo_combo_box.lua  demo_dialog.lua  demo_entry.lua  demo_expand.lua  demo_fullscreen.lua  demo_icon_view.lua  demo_label.lua  demo_list_view.lua  demo_menu.lua  demo_popup.lua  demo_progressbar.lua  demo_scrollbar.lua  demo_text_view.lua  demo_wait_box.lua  ftk_lua.c  ftk_lua.h  lua_ftk.c  lua_ftk.h  lua_ftk_animator.c  lua_ftk_animator.h  lua_ftk_animator_alpha.c  lua_ftk_animator_alpha.h  lua_ftk_animator_expand.c  lua_ftk_animator_expand.h  lua_ftk_app_window.c  lua_ftk_app_window.h  lua_ftk_bitmap.c  lua_ftk_bitmap_factory.c  lua_ftk_button.c  lua_ftk_button.h  lua_ftk_callbacks.c  (+72 more)
script_binding/lua/lua/: Makefile.am  Makefile.in
src/: Android-build.sh  Android.mk  Makefile  Makefile.am  Makefile.in  adb-push.sh  bitmap_factory_test.c  canvas_test.c  demo1.c  demo2.c  demo3.c  demo4.c  demo5.c  demo6.c  demo7.c  demo_button.c  demo_check_button.c  demo_dialog.c  demo_entry.c  demo_expand.c  demo_image.c  demo_image_button.c  demo_label.c  demo_menu.c  demo_multi_win.c  demo_progress_bar.c  demo_wait_box.c  display_fb_test.c  font_test.c  fontdata.c  fontdata.h  ftk.c  ftk.h  ftk_allocator.c  ftk_allocator.h  ftk_allocator_default.c  ftk_allocator_profile.c  ftk_animation.c  ftk_animation.h  ftk_animation_alpha.c  (+201 more)
src/backend/: Makefile.am  Makefile.in
src/backend/android/: ftk_display_android.c  ftk_display_android_gles.c  ftk_display_android_skia.c  ftk_source_android.c
src/backend/directfb/: Makefile.in  ftk_backend_dfb.c  ftk_display_dfb.c  ftk_display_dfb.h  ftk_source_dfb.c  ftk_source_dfb.h
src/backend/fb/: Makefile.am  Makefile.in  ftk_backend_fb.c  ftk_display_fb.c  ftk_display_fb.h  ftk_source_input.c  ftk_source_tslib.c  ftk_source_tslib.h
src/backend/gtk/: ftk_display_gtk.c  ftk_source_gtk.c
src/backend/iphone/: ftk_backend_iphone.m  ftk_display_iphone.h  ftk_display_iphone.m  ftk_iphone_opengles.m  ftk_iphone_quartz.m  ftk_source_iphone.h  ftk_source_iphone.m
src/backend/native/: ftk_backend_fb.c  ftk_display_fb.c  ftk_display_gles.c  ftk_display_gles.cpp  ftk_display_gles.h  ftk_display_s3g.c  ftk_display_st7781.c  ftk_source_input.c  ftk_source_ps2mouse.c
src/backend/psp/: Makefile.am  ftk_backend_psp.c  ftk_display_psp.c  ftk_source_psp.c
src/backend/qt/: ftk_display_qt.cpp  ftk_source_qt.cpp
src/backend/rt-thread/: ftk_backend_rtthread.c  ftk_display_rtthread.c  ftk_source_touch.c
src/backend/sdl/: ftk_display_sdl.c
src/backend/sigma/: Makefile.in  ftk_backend_sigma.c  ftk_display_sigma.c  ftk_display_sigma.h
src/backend/sylixos_gmem/: ftk_backend_sylixos.c  ftk_display_sylixos.c  ftk_display_sylixos.h  ftk_source_sylixos.c  ftk_source_sylixos.h  ftk_tscalibrate_sylixos.c
src/backend/ucosii/: Makefile.in  ftk_backend_fb.c  ftk_display_fb.c  ftk_display_fb.h  ftk_display_ucosii.c
src/backend/win32/: Makefile.am  Makefile.in  ftk_backend_win32.c  ftk_display_win32.c  ftk_display_win32.cpp  ftk_display_win32.h  ftk_source_win32.c  ftk_source_win32.h
src/backend/x11-emu/: Makefile.in  ftk_backend_x11.c  ftk_display_x11.c  ftk_display_x11.h  ftk_source_x11.c
src/canvas/default/: fontdata.c  fontdata.h  ftk_canvas_default.c  ftk_font.c  ftk_font.h  ftk_font_freetype.c  ftk_image_png_decoder.c
src/canvas/skia/: ftk_bitmap_factory_skia.cpp  ftk_bitmap_skia.cpp  ftk_canvas_skia.cpp
src/compiler/: Makefile.am  Makefile.in
src/compiler/ads/: Makefile.am  (+2 more)
src/data/: Makefile.am
src/demos/: Makefile.am  Makefile.in  demo_alpha.c  demo_bidi.c  demo_button.c  demo_cairo.c  demo_check_button.c  demo_combo_box.c  demo_dialog.c  demo_draw.c  demo_entry.c  demo_expand.c  demo_file_browser.c  demo_fullscreen.c  demo_hello.c  demo_icon_view.c  demo_image.c  demo_image_button.c  demo_ime.c  demo_keyboard.c  demo_label.c  demo_listview.c  demo_menu.c  demo_msgbox.c  demo_multi_win.c  demo_popup.c  demo_progress_bar.c  demo_scroll_bar.c  demo_sprite.c  demo_statusbar.c  demo_tab.c  demo_text_view.c  demo_transparent.c  demo_wait_box.c  demo_xul.c  demo_zoom.c  demos.desktop  t1.xul  t3.xul  t4.xul  (+3 more)
src/icons/: Makefile.am
src/im/: Makefile.am  Makefile.in  ftk_input_method_hw.c  ftk_input_method_py.c  ftk_lookup_table.c  ftk_lookup_table.h  ftk_stroke_painter_cairo.c
src/os/: Makefile.am  Makefile.in
src/test/: Makefile.am  Makefile.in  backend_sigma_test.c  bitmap_factory_test.c  bitmap_test.c  bmp_test.c  canvas_test.c  clipboard_test.c  config_test.c  display_fb_test.c  display_test.c  expr_test.c  font_test.c  fs_test.c  ftk_test.c  icon_cache_test.c  input_test.c  interpolator_test.c  keyboard_test.c  label_test.c  list_model_default_test.c  lookup_table_test.c  main_loop_test.c  pairs_test.c  params_test.c  primary_source_test.c  t1.xul  t2.xul  text_buffer_test.c  theme_test.c  timer_test.c  tslib_test.c  util_test.c  widget_test.c  xml_parser_test.c  xul_stress_test.c  xul_test.c
src/testdata/: Makefile.am
src/testftk/: Makefile  ldrui.c  ldrui.h  main.c
theme/default/: Makefile.am  Makefile.in  animations.xml  keyboard.xml  theme.xml
(+429 files in other folders)
